--- a/index.html
+++ b/index.html
@@ -2,22 +2,79 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
-  </head><h1>Responsive web desig</h1><p>Responsive web design is an approach to web design which makes web pages render well on a variety of devices and window or screen sizes.
-    Website objectives and works with any device: from your phone or tablet to your computer .
-
-    If you'd like to start from scratch without any files, you are encouraged to do so! You learn the most by developing on your own! But, it can be a bit challenging having to start from scratch, so we do provide a starter project to use.
-</p><br></br><a href="https://github.com/himak516267/assign">https://github.com/himak516267/assign</a>
-<p>TASK:
-       Considering the draft project do the following modifications.<li>
-ADD Flexbox and mediaqueries to make the page Responsive.</li><li>
-The views should be attained by giving above mentioned breakpoints.</li>
-</p>
-  <a href="https://drive.google.com/file/d/14Qmlktmi6m9JJNI_cfmtpmMfhoxqFNGP/view"><li>Desktop</a><br></br></li>
-    <a href="https://drive.google.com/file/d/1Os4PrmJXbIlGdH3o7WQyaOaZSJk-DC_5/view"><li>Tablet</a><br></br></li>
-  <a href="https://drive.google.com/file/d/1TJPom-WmS8QVCpnaGJJ7W__RxjpIvlWr/view"><li>Mobile</a><br></br></li>
-
+    <title>fastion store</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
   <body>
+    <header>
 
+    </header>
+    <div class="banner4">
+    <center><img src="images/shoptasty.png" alt=""><h1>fastion store</h1></center>
+    </div>
+
+    <div class="banner">
+
+      <img src="images\fcontent1.jpg" alt="">
+
+    </div>
+    <div class="banner2">
+      <div class="child">
+<img src="images\fcontent2.jpg" alt="">
+    </div>
+      <div class="child">
+      <img src="images\fcontent3.jpg" alt="">
+    </div>
+  </div>
+  <div class="banner2"><div class="child">
+    <img src="images\fcontent4.jpg" alt="">
+  </div>
+  <div class="child">
+    <img src="images\fcontent5.jpg" alt="">
+  </div>
+</div>
+  <div class="banner2">
+    <div class="child2">
+      <img src="images\fcontent6.jpg" alt="">
+    </div>
+      <div class="child2">
+        <img src="images\fcontent7.jpg" alt="">
+       </div>
+        <div class="child2">
+          <img src="images\fcontent8.jpg" alt="">
+
+        </div>
+
+  </div>
+  <div class="banner2">
+      <div class="child">
+    <img src="images\fcontent9.jpg" alt="">
+      </div>
+      <div class="child">
+    <img src="images\fcontent10.jpg" alt="">
+      </div>
+  </div>
+  <div class="banner">
+          <img src="images\fcontent11.jpg" alt="">
+      </div>
+      <div class="banner">
+              <img src="images/category.jpg" alt="">
+          </div>
+          <div class="banner2">
+            <div class="child">
+            <img src="images/cat1.jpg" alt="">
+              </div>
+              <div class="child">
+              <img src="images/cat2.jpg" alt="">
+                </div>
+                <div class="child">
+                <img src="images/cat3.jpg" alt="">
+                  </div>
+                  <div class="child">
+                  <img src="images/cat4.jpg" alt="">
+                    </div>
+
+            </div>
   </body>
+
 </html>
