--- a/index1.html
+++ b/index1.html
@@ -12,8 +12,8 @@
       <img src="images/shoptasty.png" alt="hai">
     </div>
     <div>
-    <h1>FASHION STORE</h1>
-    </div>
+    <center><h1>FASHION STORE</h1>
+    </div></center>
     </header>
     <div class="banner">
 
