--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 ADD Flexbox and mediaqueries to make the page Responsive.</li><li>
 The views should be attained by giving above mentioned breakpoints.</li>
 </p>
-  <a href="file:///home/acer/Desktop/assign3/index1.html"><li>Desktop</a><br></br></li>
+  <a href="index1.html"><li>Desktop</a><br></br></li>
     <a href="file:///home/acer/Desktop/assign3/index1.html"><li>Tablet</a><br></br></li>
   <a href="file:///home/acer/Desktop/assign3/index1.html"><li>Mobile</a><br></br></li>
 
